# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: build.yml
gendiff/: __init__.py
gendiff/diff/: diff_builder.py  formatter.py  generate_diff.py  parser.py
gendiff/formatter/: formatter.py  json.py  plain.py
gendiff/formatters/: formatter.py  stylish.py
gendiff/scripts/: __init__.py  diff_builder.py  gendiff.py  generate_diff.py
tests/: test_generate_diff.py
tests/test_data/: expected_json_diff.txt
